[project]
name = "dpt-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "Martin Crampon",email = "martin.crampon@hotmail.fr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click (>=8.1.8,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
